--- a/angular/manejo-de-archivos/src/app/item-archivo/item-archivo.component.html
+++ b/angular/manejo-de-archivos/src/app/item-archivo/item-archivo.component.html
@@ -4,30 +4,27 @@
     <span *ngIf="itemInfo.tipo!='dir'">{{itemInfo.tamano}} </span>
 
     <span class="herramientas">
-
         <span *ngIf="itemInfo.tipo!='dir'">
-            <span class="item editar"> 
-            <i class="fa fa-pencil" aria-hidden="true" (click)="activarEdicion(itemInfo.nombre)" ></i>
+            <span class="item editar">
+                <i class="fa fa-pencil" aria-hidden="true" (click)="activarEdicion(itemInfo.nombre)"></i>
             </span>
 
-    <span class="item borrar"> 
-                <i class="fa fa-trash" aria-hidden="true" (click)="borrar(itemInfo)" ></i>
+            <span class="item borrar">
+                <i class="fa fa-trash" aria-hidden="true" (click)="borrar(itemInfo)"></i>
             </span>
-
-    </span>
-    <span *ngIf="itemInfo.tipo=='dir'">
-            <span class="item borrar"> 
+        </span>
+        <span *ngIf="itemInfo.tipo=='dir'">
+            <span class="item borrar">
                 <i class="fa fa-arrow-right" aria-hidden="true" (click)="nuevaRuta(itemInfo)"></i>
-               
             </span>
-    </span>
+        </span>
+
 
     </span>
-
 </div>
-
 <div *ngIf="edicionActiva">
-    <input type="text" [(ngModel)]="modeloItem.nuevoNombre">
+    <input type="text" [(ngModel)]="modeloItem">
     <button (click)="renombrar(itemInfo)"> OK </button>
     <button (click)="desactivarEdicion()"> Cancelar</button>
+
 </div>
