--- a/angular/manejo-de-archivos/src/app/lista-de-archivos/lista-de-archivos.component.html
+++ b/angular/manejo-de-archivos/src/app/lista-de-archivos/lista-de-archivos.component.html
@@ -1,26 +1,20 @@
-<button type="button" class="btn btn-danger" *ngIf="mostrarSuperior()" (click)=" irASuperior()">
-<i class="fa fa-level-up" aria-hidden="true"></i> nivel superior
+<button type="button" class="btn btn-danger" *ngIf="mostrarSuperior()" (click)=" irASuperior()" >
+    <i class="fa fa-level-up" aria-hidden="true"></i> nivel superior
 </button>
 
 <ul class="list-unstyled">
-
-
-  <li *ngFor="let item of archivos" class="container">
-    <app-item-archivo [itemInfo]="item" (cambioArchivo)="refrescar()"> </app-item-archivo>
-  </li>
-
+    <li *ngFor="let item of archivos">
+        <app-item-archivo [itemInfo]="item" (cambioArchivo)="refrescar()" ></app-item-archivo>
+    </li>
 </ul>
-
-
-<form id="formulario-video" (ngSubmit)="onSubmit(miFormulario)" #miFormulario="ngForm">
-  <label class="upload-button is-pulled-left">
+<form  (ngSubmit)="onSubmit($event)"  >
+    <label class="upload-button btn btn-default is-pulled-left">
         <input type="file"
-              class="hidden"
-              ngFileSelect
-              [options]="options"
-              [events]="inputUploadEvents"
-              (onUpload)="handleUpload($event)" >
-              Seleccionar Imagen
-      </label>
-  <input type="submit" />
+        class="hidden"
+        [accept]="extensionesPermitidas"
+        (change)="onFileSelected($event)"
+        >
+        Seleccionar Imagen
+    </label>
+    <button type="submit" class="btn btn-default">Subir</button>
 </form>
